# muda_score

./: README.md  score.midi  setup.cfg  setup.py
illustrations/: segment_01.ly
muda_score/: score_structure.py  segment_00.ly  stylesheet.ily  test.sh
muda_score.egg-info/: PKG-INFO  SOURCES.txt
muda_score/components/pitch/: pitches_01.py
muda_score/components/rhythm/: rmakers_01.py
muda_score/components/timespans/: segment_01_offset_counter.ly  timespans_01.py  timespans_01old.py
muda_score/materials/: materials_01.py
muda_score/score/: score.ly  score.midi  score.py
muda_score/segments/: segment_01.ly  segment_01.py
muda_score/segments/illustrations/: segment_01.ly
tests/: test3.py  tests.py  tests2.py
