[metadata]
# replace with your username:
name = muda_score-Raubach
version = 0.0.1
author = Davi Raubach
author_email = raubachdavi@gmail.com
description = An ensemble score
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DaviRaubach/muda_score
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6